# Transformer_for_kvcache

./: .gitignore  CLAUDE.md  README.md  api_server.py  offline_infer.py  pyproject.toml  requirements.txt  train.py
configs/: base_config.yaml
docs/: algorithms.md  attention_analysis_guide.md  commit_prep_2026-03-23.md
oracle_kv_token_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
outputs/airline_task30_alpha_grid_20260408_134404/: server_alpha1.pid  server_alpha2.pid  server_alpha3.pid  server_stateless.pid  tau2_alpha1.pid  tau2_alpha2.pid  tau2_alpha3.pid  tau2_stateless.pid
outputs/attention_analysis/: attention_by_role.csv
outputs/attention_analysis_task10/: attention_by_role.csv
outputs/attention_task10/: attention_by_role.csv
outputs/evict_period_analysis/: REPORT_evict_period.md  evict_period_runs.csv  evict_period_tasks.csv
outputs/h2o_prefill_retention_smoke/: message_retention.csv
outputs/h2o_prefill_retention_smoke_rounds/: message_retention.csv  reactivation_summary.csv  retention_delta.csv  retention_summary.csv  round_reuse_by_role.csv  round_reuse_summary.csv
outputs/h2o_prefill_retention_task10_rounds/: reactivation_summary.csv  retention_delta.csv  retention_summary.csv  round_reuse_by_role.csv  round_reuse_summary.csv
outputs/stress_analysis/: stress_aggregated_configs.csv  stress_best_h2o_by_budget.csv  stress_raw_runs.csv  stress_summary.txt
outputs/stress_analysis_tasks_0_1_3_4_5_6_10_13_26_28/: stress_aggregated_configs.csv  stress_best_h2o_by_budget.csv  stress_raw_runs.csv  stress_raw_simulations.csv  stress_summary.txt  stress_task_summary.csv
outputs/stress_recap/: REPORT.md  aggregated_configs.csv  all_runs.csv  best_h2o_by_budget.csv  (+7 more)
scripts/: analyze_attention_by_role.py  analyze_stress_recap.py  analyze_task10_total_acc.py  analyze_tau2_stress.py  bootstrap_all.sh  probe_sim_structure.py  run_tau2_offline_parallel_multi_gpu.sh  run_tau2_offline_sequential.sh  run_tau2_stress_task10.sh  run_tau2_stress_test.sh  run_tau2_stress_test_phase2_gpu567.sh
src/: __init__.py  api.py  chat_format.py  data_loader.py  model.py  session_store.py  trainer.py  utils.py
tests/: test_chat_format_and_session.py  test_dta_h2o.py  test_model_cache_prune.py
(+67 files in other folders)
