[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-kv-token-eval"
version = "0.1.0"
description = "Token-level oracle StreamingLLM/H2O simulator for local Transformer models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.11",
  "numpy>=1.24.0",
  "PyYAML>=6.0.2",
  "torch>=2.2.0",
  "transformers>=4.45.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
analysis = [
  "addict>=2.4.0",
  "deepdiff>=8.4.2",
  "docstring-parser>=0.16",
  "fs",
  "gymnasium>=1.2.2",
  "langfuse>=2.60.7",
  "litellm>=1.65.0",
  "loguru>=0.7.3",
  "matplotlib>=3.10.1",
  "pandas>=2.2.3",
  "plotly>=6.0.0",
  "psutil>=7.0.0",
  "pydantic-argparse>=0.10.0",
  "redis>=5.2.1",
  "rich",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  "tabulate>=0.9.0",
  "tenacity>=9.0.0",
  "toml>=0.10.2",
  "watchdog>=6.0.0",
]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.9.1",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv.workspace]
members = [
    "opencompass",
]
